<resources>
    <string name="app_name">JariManisV3</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="textLogin">Login</string>
    <string name="enterEmail">Enter email</string>
    <string name="enterPassword">Enter password</string>
    <string name="registrasiNow">Daftar sekarang juga</string>
    <string name="dontHaveacc">Tidak mempunyai akun</string>
    <string name="register">Register</string>
    <string name="ReenterPassword">Re-enter password</string>
    <string name="LupaAkun">Lupa akun</string>
    <string name="anda_lupa_akun">Anda Lupa Akun ?</string>
    <string name="title_more">Lainnya</string>
    <string name="action_search">Search</string>
    <string name="title_chat">Chat</string>
    <string name="default_notification_channel_id">100</string>
    <string name="buat_thread">Buat thread</string>
    <string name="tulis_balasan">Komentar..</string>
    <string name="komentar">Komentar</string>

    <string name="rating">Rating..</string>
    <string name="privasi">Privacy</string>
    <string name="Terms">Terms and Conditions</string>
    <string name="Help">Assistance</string>
    <string name="Copyrigth">2019 copyright. all rights reserved</string>
    <string name="LogOut">LogOut</string>
    <string name="tuliskan">Tuliskan sesuatu..</string>
    <string name="action_send">Kirim</string>
    <string name="image">image</string>
    <string name="title">Judul</string>

    <string name="toast_cannot_retrieve_selected_video">Cannot retrieve selected video</string>
    <string name="video_saved_at">Video saves at : $%1s</string>
    <string name="pick_a_video">Select or record a a video below to try it out:</string>
    <string name="short_seconds">sec</string>
    <string name="title_activity_discussion_video_acitivity">Videos</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="fromEmpty">Tidak boleh kosong</string>
    <string name="chat">Tuliskan pesan</string>
    <string name="pemberitahuan">Pemberitahuan</string>
    <string name="pendaftaranBerhasil">Pendaftaran Berhasil</string>
    <string name="newFoto">Tambahkan Foto</string>
    <string name="newVideo">Tambahkan video</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comenater">Diskusi</string>
    <string name="atau">Atau</string>
    <string name="menyukai">Menyukai</string>
    <string name="berdiskusi">Berdiskusi</string>
</resources>
